--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="baseMod">
+<html lang="en" ng-app="app">
 <head>
     <meta charset="utf-8">
     <title>Taskurotta</title>
@@ -8,23 +8,26 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="base/css/bootstrap.css" rel="stylesheet">
-    <link href="base/css/pygments.css" rel="stylesheet">
+    <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="css/pygments.css" rel="stylesheet">
     <style type="text/css">
         body {
             padding-top: 60px;
             padding-bottom: 40px;
         }
     </style>
-    <link href="base/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
+    <script src="vendor/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
 
     <script src="vendor/angular/angular.js"></script>
     <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="vendor/showdown/compressed/showdown.js"></script>
+    <script src="vendor/jquery/jquery.js"></script>
+    <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
 
     <!-- Fav and touch icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
@@ -32,15 +35,13 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
     <link rel="shortcut icon" href="../assets/ico/favicon.png">
-
-    <script src="js/jquery.js"></script>
-
     <!--
     <link rel="stylesheet" href="css/highlight_github.css">
     <script src="js/highlight.pack.js"></script>
     -->
     <script src="mod_markdown/scripts/markdown.tags.js"></script>
-    <script src="page_index/scripts/page.js"></script>
+    <script src="mod_navigation/scripts/navigation.controllers.js"></script>
+    <script src="_index/scripts/page.js"></script>
 
 </head>
 
@@ -50,52 +51,36 @@
 <script>hljs.initHighlightingOnLoad();</script>
 -->
 
+<!-- Navbar
+    ================================================== -->
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner" ui-view="navBar"></div>
 </div>
 
-
+<!-- Document
+    ================================================== -->
 <div class="container">
 
-    <script>
+<script>
     $("#rootnav_index").attr("class", "active");
 </script>
 
+    <div class="row">
+        <!-- Docs nav
+          ================================================== -->
+        <div class="hero-unit" ui-view="hero"></div>
 
-    <!-- Main hero unit for a primary marketing message or call to action -->
-    <div class="hero-unit" ui-view="hero">
-
-    </div>
-
-    <!-- Example row of columns -->
-    <div class="row" ui-view>
+        <!-- Docs content
+          ================================================== -->
+        <div class="row" ui-view></div>
     </div>
 
     <hr>
-
+    <!-- Footer
+        ================================================== -->
     <footer ui-view="footer"></footer>
 
-</div> <!-- /container -->
-
-<!-- Le javascript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-        <!--
-<script src="js/bootstrap-transition.js"></script>
-<script src="js/bootstrap-alert.js"></script>
-<script src="js/bootstrap-modal.js"></script>
-<script src="js/bootstrap-dropdown.js"></script>
-<script src="js/bootstrap-scrollspy.js"></script>
-<script src="js/bootstrap-tab.js"></script>
-<script src="js/bootstrap-tooltip.js"></script>
-<script src="js/bootstrap-popover.js"></script>
-<script src="js/bootstrap-button.js"></script>
-<script src="js/bootstrap-collapse.js"></script>
-<script src="js/bootstrap-carousel.js"></script>
-<script src="js/bootstrap-typeahead.js"></script>
--->
-
-<script src="js/bootstrap-dropdown.js"></script>
+</div>
 
 
 </body>
