--- a/app/road_map.html
+++ b/app/road_map.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="baseMod">
+<html lang="en" ng-app="app">
 <head>
     <meta charset="utf-8">
     <title>Taskurotta - План</title>
@@ -8,13 +8,12 @@
     <meta name="author" content="romario13@gmail.com">
 
     <!-- Le styles -->
-    <link href="base/css/bootstrap.css" rel="stylesheet">
-    <link href="base/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="base/css/stf.css" rel="stylesheet">
+    <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="css/stf.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
+    <script src="vendor/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
 
     <!-- Fav and touch icons -->
@@ -26,12 +25,9 @@
 
     <script src="vendor/angular/angular.js"></script>
     <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
-
-    <script src="js/jquery.js"></script>
-    <!--<script src="js/angular.min.js"></script>-->
-    <script src="markdown/scripts/tag-markdown.js"></script>
-    <script src="js/showdown.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="vendor/showdown/compressed/showdown.js"></script>
+    <script src="vendor/jquery/jquery.js"></script>
+    <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
 
     <!--
     <link rel="stylesheet" href="css/highlight_github.css">
@@ -39,7 +35,8 @@
     -->
 
     <script src="mod_markdown/scripts/markdown.tags.js"></script>
-    <script src="page_road_map/scripts/page.js"></script>
+    <script src="mod_navigation/scripts/navigation.controllers.js"></script>
+    <script src="_road_map/scripts/page.js"></script>
 
 </head>
 
@@ -48,34 +45,30 @@
 
 <!-- Navbar
     ================================================== -->
-
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner" ui-view="navBar"></div>
 </div>
 
 <!-- Document
     ================================================== -->
-
 <div class="container">
-    <div class="row">
 
+    <div class="row">
         <!-- Docs nav
           ================================================== -->
+        <div class="span3 bs-docs-sidebar" ui-view="sideBar"></div>
 
-        <div class="span3 bs-docs-sidebar" ui-view="sideBar">
-        </div>
-
-        <div class="span9">
-
-            <markdown src="md/road_map.md"></markdown>
-
-        </div>
+        <!-- Docs content
+          ================================================== -->
+        <div class="span9" ui-view></div>
     </div>
+
+    <hr>
+    <!-- Footer
+        ================================================== -->
+    <footer ui-view="footer"></footer>
+
 </div>
-
-<hr>
-
-<footer ui-view="footer"></footer>
 
 </body>
 </html>
