--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ source: _includes/index.md
 
             <p>Open source coordination of distributed processes for Java.</p>
             <p>
-                <a class="btn btn-lg btn-primary" href="/getting-started/" role="button">Getting Started &raquo;</a>
+                <a class="btn btn-lg btn-default" href="/getting-started/" role="button">Getting Started &raquo;</a>
             </p>
         </div>
         <div class="col-md-4">
